try actually setting the registory name.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,18 +42,10 @@ jobs:
       continue-on-error: true
       run: docker stop data-aggregation
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
     - name: Run new container
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: servers-data-aggregation
+        IMAGE_TAG: ${{ github.run_number }}
       run: |
         docker run -d \
           -e DB_USER=docker \
