--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,11 @@ services:
       POSTGRES_DB: "servers"
 volumes: 
   db_volume: {}
-# docker run --rm -p 5555:5432 -e POSTGRES_USER=docker -e POSTGRES_PASSWORD=docker -e POSTGRES_DB=servers postgres:12-alpine
+docker run --rm -p 5555:5432 \
+  -e POSTGRES_USER=docker \
+  -e POSTGRES_PASSWORD=anevenmoresecurepassword \
+  -e POSTGRES_DB=servers \
+  -v db_volume=/var/lib/postgresql/data
+  --network=data-aggregation \
+  --name postgres \
+  postgres:12-alpine
