--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,10 @@ jobs:
     - name: Stop existing container
       continue-on-error: true
       run: docker stop data-aggregation
+      
+    - name: RM existing container
+      continue-on-error: true
+      run: docker rm data-aggregation
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -61,6 +65,7 @@ jobs:
           -e "DB_HOST=postgres" \
           -e "DB=servers" \
           -e "DB_PASS={{ secrets.DB_PASS }}" \
+          -e "DB_PORT=5432" \
           -e "QE_PSK={{ secrets.QE_PSK }}" \
           --network=data-aggregation \
           --restart=always \
