use netquake protcol for fte

--- a/ServersDataAggregation.App/Properties/launchSettings.json
+++ b/ServersDataAggregation.App/Properties/launchSettings.json
@@ -3,6 +3,9 @@
     "ServersDataAggregation.App": {
       "commandName": "Project",
       "environmentVariables": {
+        "DB_HOST": "localhost",
+        "DB_USER": "docker",
+        "DB_PASS": "docker"
       }
     }
   }
